Fixed spacing issue

--- a/pages/App.css
+++ b/pages/App.css
@@ -39,7 +39,7 @@ body {
 }
 
 #popular-services {
-  margin-top: 20vh;
+  margin-top: 13vh;
 }
 
 .App {
